# clip-studio-remote

./: .editorconfig  .eslintrc.js  .gitignore  README.md  jest.config.ts  package.json  renovate.json  serve.js  tsconfig.json
.github/workflows/: lint.yml  test.yml
client/: 404.html  client.ts  index.html  sender.js  sender.ts  stream.spec.ts  style.css  webSocket.ts  wsState.ts
server/: sendkeys.d.ts  serve.ts
server-rs/: Cargo.toml
server-rs/src/: config.rs  lib.rs  main.rs  thread_pool.rs  worker.rs
