[package]
name = "sendkeys-server"
description = "StaticFile / WebSocket server implementation for executing sendkeys command every time it receives WebSocket message"
version = "0.1.0"
authors = ["0918nobita <nobita.0918@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
base64 = "0.13.0"
httparse = "1.3.4"
regex = "1.4.3"
sha-1 = "0.9.2"
